--- a/My-own-sec4/index.html
+++ b/My-own-sec4/index.html
@@ -50,19 +50,19 @@ Secondary Sections
 			</figure>
 			<h2>The Octopus</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. </p>
-			<a href="#">Tenticals &raquo;</a>
+			<a href="#" class="button">Tenticals &raquo;</a>
 		</div>
 		<div class="column">
 			<figure><img src="images/crab-icon.png" alt="Crab"></figure>
 			<h2>The Crab</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quasi aliquam, sapiente quisquam sed, numquam illo autem voluptas ut eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci.</p>
-			<a href="#">Crabby &raquo;</a>
+			<a href="#" class="button">Crabby &raquo;</a>
 		</div>
 		<div class="column">
 			<figure><img src="images/whale-icon.png" alt="Whale"></figure>
 			<h2>The Whale</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. </p>
-			<a href="#">Stuart &raquo;</a>
+			<a href="#" class="button">Stuart &raquo;</a>
 		</div>
 	</div><!-- end wrapper -->
 
