--- a/My-own-sec4/shark-movies.html
+++ b/My-own-sec4/shark-movies.html
@@ -53,7 +53,7 @@ Intro Section
 		</div><!-- end wrapper -->
 	</section><!-- end section-1 -->
 
-	<section id="jaws" class="content-block style-1 wave-border">
+	<section id="jaws" class="content-block style-1 wave-border grouping">
 		<div class="wrapper">
 			<a href="#" class="figure">
 				<img src="images/jaws.jpg" alt="Jaws movie">
@@ -69,10 +69,10 @@ Intro Section
 				Reprehenderit expedita ea, ipsam recusandae inventore doloribus esse accusamus aliquid, saepe blanditiis
 				ipsum dignissimos iste id pariatur ut praesentium dicta earum ad cupiditate aliquam. Non, modi, sequi.
 				Incidunt, vel!</p>
-			<a href="">Learn More</a>
+			<a href="" class="button learn-more button-narrow float-right">Learn More</a>
 		</div><!-- end of wrapper -->
 	</section>
-	<section id="sharknado" class="content-block style-2">
+	<section id="sharknado" class="content-block style-2 grouping">
 		<div class="wrapper">
 			<a href="#" class="figure">
 				<img src="images/sharknado.jpg" alt="Sharknado movie">
@@ -87,10 +87,10 @@ Intro Section
 				voluptatum totam est ex architecto placeat eaque, suscipit nemo. Reprehenderit expedita ea, ipsam
 				recusandae inventore doloribus esse accusamus aliquid, saepe blanditiis ipsum dignissimos iste id
 				pariatur ut praesentium dicta earum ad cupiditate aliquam. Non, modi, sequi. Incidunt, vel!</p>
-			<a href="">Learn More</a>
+			<a href="" class="button learn-more button-narrow float-right">Learn More</a>
 		</div><!-- end of wrapper -->
 	</section>
-	<section id="open-water" class="content-block style-1">
+	<section id="open-water" class="content-block style-1 grouping">
 		<div class="wrapper">
 			<a href="#" class="figure">
 				<img src="images/open-water.jpg" alt="Open Water movie">
@@ -106,7 +106,7 @@ Intro Section
 				expedita ea, ipsam recusandae inventore doloribus esse accusamus aliquid, saepe blanditiis ipsum
 				dignissimos iste id pariatur ut praesentium dicta earum ad cupiditate aliquam. Non, modi, sequi.
 				Incidunt, vel!</p>
-			<a href="">Learn More</a>
+			<a href="" class="button learn-more button-narrow float-right">Learn More</a>
 		</div><!-- end of wrapper -->
 	</section>
 
