--- a/My-own-sec4/index.html
+++ b/My-own-sec4/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<!-- description -->
+	<!-- description -->
 	<title>Section 4-Creating Buttons with Modular, Re-Usable CSS - Mastering CSS</title>
 
-<!-- stylesheets -->
+	<!-- stylesheets -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 
-<!-- stylesheets for older browsers -->	
+	<!-- stylesheets for older browsers -->
 	<!-- ie6/7 micro clearfix -->
 	<!--[if lte IE 7]>
 		<style>
@@ -26,48 +27,74 @@
 
 
 </head>
+
 <body>
 
-<!-- Intro Section -->
+	<!-- Intro Section -->
 
-<section>
-	<div class="wrapper">
-		<h1>Old Chompy</h1>
-		<h2>Dedicated to sharks and other aquatic species</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut recusandae totam iste ad cumque quas, alias explicabo est non placeat facilis vero voluptatibus odio. Quidem deserunt dignissimos, excepturi officiis tempore itaque repellat ipsum voluptatibus suscipit cum, ipsa. At, doloribus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut recusandae totam iste ad cumque quas, alias explicabo est non placeat facilis vero voluptatibus odio. Quidem deserunt dignissimos, excepturi officiis tempore itaque repellat ipsum voluptatibus suscipit cum, ipsa. At, doloribus!</p>
-	</div>
-</section><!-- end section -->
-<!-- 
+	<section>
+		<div class="wrapper grouping">
+			<div class="intro-content">
+				<h1>Old Chompy</h1>
+				<h2>Dedicated to sharks and other aquatic species</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut recusandae totam iste ad
+					cumque quas, alias explicabo est non placeat facilis vero voluptatibus odio. Quidem deserunt
+					dignissimos, excepturi officiis tempore itaque repellat ipsum voluptatibus suscipit cum, ipsa. At,
+					doloribus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut recusandae totam
+					iste ad cumque quas, alias explicabo est non placeat facilis vero voluptatibus odio. Quidem deserunt
+					dignissimos, excepturi officiis tempore itaque repellat ipsum voluptatibus suscipit cum, ipsa. At,
+					doloribus!</p>
+			</div>
+			<div class="go-premium">
+				<a href="#" class="call-to-action">Go Premium</a>
+				<p>So many awesome features .  </p>
+			</div>
+		</div>
+	</section><!-- end section -->
+	<!-- 
 ===============
 Secondary Sections
 ===============
 -->
-<section class="secondary-section grouping">
-	<div class="wrapper">
-		<div class="column">
-			<figure>
-				<img src="images/octopus-icon.png" alt="Octopus">
-			</figure>
-			<h2>The Octopus</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. </p>
-			<a href="#" class="button">Tenticals &raquo;</a>
-		</div>
-		<div class="column">
-			<figure><img src="images/crab-icon.png" alt="Crab"></figure>
-			<h2>The Crab</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quasi aliquam, sapiente quisquam sed, numquam illo autem voluptas ut eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci.</p>
-			<a href="#" class="button">Crabby &raquo;</a>
-		</div>
-		<div class="column">
-			<figure><img src="images/whale-icon.png" alt="Whale"></figure>
-			<h2>The Whale</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. </p>
-			<a href="#" class="button">Stuart &raquo;</a>
-		</div>
-	</div><!-- end wrapper -->
+	<section class="secondary-section grouping">
+		<div class="wrapper">
+			<div class="column">
+				<figure>
+					<img src="images/octopus-icon.png" alt="Octopus">
+				</figure>
+				<h2>The Octopus</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione,
+					facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing
+					elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem
+					ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere
+					est assumenda itaque obcaecati adipisci. </p>
+				<a href="#" class="button">Tenticals &raquo;</a>
+			</div>
+			<div class="column">
+				<figure><img src="images/crab-icon.png" alt="Crab"></figure>
+				<h2>The Crab</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quasi aliquam, sapiente quisquam
+					sed, numquam illo autem voluptas ut eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+					Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum
+					dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est
+					assumenda itaque obcaecati adipisci.</p>
+				<a href="#" class="button">Crabby &raquo;</a>
+			</div>
+			<div class="column">
+				<figure><img src="images/whale-icon.png" alt="Whale"></figure>
+				<h2>The Whale</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione,
+					facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing
+					elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem
+					ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere
+					est assumenda itaque obcaecati adipisci. </p>
+				<a href="#" class="button">Stuart &raquo;</a>
+			</div>
+		</div><!-- end wrapper -->
 
-</section>
+	</section>
 
 
 </body>
+
 </html>
