--- a/My-own-sec4/index.html
+++ b/My-own-sec4/index.html
@@ -29,7 +29,19 @@
 </head>
 
 <body>
+	<!-- Nav Section  -->
 
+	<nav class="nav-container grouping">
+		<figure>
+			<img src="images/sharky.png" alt="shark png">
+		</figure>
+		<ul class="primary-nav">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Movies</a></li>
+			<li><a href="#">Species</a></li>
+			<li><a href="#">Chum</a></li>
+		</ul>
+	</nav>
 	<!-- Intro Section -->
 
 	<section>
