--- a/My-own-sec4/index.html
+++ b/My-own-sec4/index.html
@@ -37,7 +37,13 @@
 		</figure>
 		<ul class="primary-nav">
 			<li><a href="#">Home</a></li>
-			<li><a href="#">Movies</a></li>
+			<li class="has-submenu"><a href="#">Movies</a>
+				<ul>
+					<li><a href="#">Jaws</a></li>
+					<li><a href="#">Sharknado</a></li>
+					<li><a href="#">Open Water</a></li>
+				</ul>
+			</li>
 			<li><a href="#">Species</a></li>
 			<li><a href="#">Chum</a></li>
 		</ul>
