section 5 complete starting section 6 -responsive

--- a/My-own-sec4/index.html
+++ b/My-own-sec4/index.html
@@ -36,8 +36,8 @@
 			<img src="images/sharky.png" alt="shark png">
 		</figure>
 		<ul class="primary-nav">
-			<li><a href="#">Home</a></li>
-			<li class="has-submenu"><a href="#">Movies</a>
+			<li ><a class="active" href="./index.html">Home</a></li>
+			<li class="has-submenu"><a href="./shark-movies.html">Movies</a>
 				<ul>
 					<li><a href="#">Jaws</a></li>
 					<li><a href="#">Sharknado</a></li>
