--- a/My-own-sec4/shark-movies.html
+++ b/My-own-sec4/shark-movies.html
@@ -31,7 +31,23 @@
 </head>
 
 <body>
-
+	<nav class="nav-container grouping">
+		<figure>
+			<img src="images/sharky.png" alt="shark png">
+		</figure>
+		<ul class="primary-nav">
+			<li><a href="./index.html">Home</a></li>
+			<li class="has-submenu "><a class="active" href="./shark-movies.html">Movies</a>
+				<ul>
+					<li><a href="#">Jaws</a></li>
+					<li><a href="#">Sharknado</a></li>
+					<li><a href="#">Open Water</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Species</a></li>
+			<li><a href="#">Chum</a></li>
+		</ul>
+	</nav>
 
 	<!--
 ====================
@@ -40,7 +56,7 @@ Intro Section
 -->
 
 
-	<section class="section-intro">
+	<section class="section-intro grouping">
 		<div class="wrapper">
 			<div class="intro-content">
 				<h1>Best Movies</h1>
