--- a/My-own-sec4/shark-movies.html
+++ b/My-own-sec4/shark-movies.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- description -->
 	<title>Movies - Mastering CSS</title>
@@ -13,6 +14,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/responsive.css">
 
 	<!-- stylesheets for older browsers -->
 	<!-- ie6/7 micro clearfix -->
@@ -32,9 +34,13 @@
 
 <body>
 	<nav class="nav-container grouping">
+		
 		<figure>
 			<img src="images/sharky.png" alt="shark png">
 		</figure>
+		<div id="burger" class="mobile-menu-icon"></div>
+
+
 		<ul class="primary-nav">
 			<li><a href="./index.html">Home</a></li>
 			<li class="has-submenu "><a class="active" href="./shark-movies.html">Movies</a>
@@ -126,7 +132,11 @@ Intro Section
 		</div><!-- end of wrapper -->
 	</section>
 
-
+	<script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+  <script src="custom.js"></script>
 </body>
 
 </html>
