--- a/My-own-sec4/index.html
+++ b/My-own-sec4/index.html
@@ -82,7 +82,7 @@ Secondary Sections
 		<div class="wrapper">
 			<div class="column">
 				<figure>
-					<img src="images/octopus-icon.png" alt="Octopus">
+					<img src="images/octopus-icon.svg" alt="Octopus">
 				</figure>
 				<h2>The Octopus</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione,
@@ -93,7 +93,7 @@ Secondary Sections
 				<a href="#" class="button">Tenticals &raquo;</a>
 			</div>
 			<div class="column">
-				<figure><img src="images/crab-icon.png" alt="Crab"></figure>
+				<figure><img src="images/crab-icon.svg" alt="Crab"></figure>
 				<h2>The Crab</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quasi aliquam, sapiente quisquam
 					sed, numquam illo autem voluptas ut eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -103,7 +103,7 @@ Secondary Sections
 				<a href="#" class="button">Crabby &raquo;</a>
 			</div>
 			<div class="column">
-				<figure><img src="images/whale-icon.png" alt="Whale"></figure>
+				<figure><img src="images/whale-icon.svg" alt="Whale"></figure>
 				<h2>The Whale</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione,
 					facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -142,6 +142,7 @@ Secondary Sections
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.4.1.js"
 		integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+		<script src="retina.js"></script>
 	<script src="custom.js"></script>
 </body>
 
