--- a/My-own-sec4/shark-movies.html
+++ b/My-own-sec4/shark-movies.html
@@ -161,6 +161,7 @@ Intro Section
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
+  <script src="retina.js"></script>
   <script src="custom.js"></script>
 </body>
 
