--- a/My-own-sec4/shark-movies.html
+++ b/My-own-sec4/shark-movies.html
@@ -37,7 +37,7 @@
 	<nav class="nav-container grouping">
 		
 		<figure>
-			<img src="images/sharky.png" alt="shark png">
+			<img srcset="images/sharky.png" alt="shark png">
 		</figure>
 		<div id="burger" class="mobile-menu-icon"></div>
 
@@ -79,7 +79,7 @@ Intro Section
 	<section id="jaws" class="content-block style-1 wave-border grouping">
 		<div class="wrapper">
 			<a href="#" class="figure">
-				<img src="images/jaws.jpg" alt="Jaws movie">
+				<img srcset="images/jaws.jpg 1x,  images/jaws@2x.jpg 2x" alt="Jaws movie">
 			</a>
 			<h1>Jaws</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa totam magni repudiandae quibusdam
@@ -98,7 +98,7 @@ Intro Section
 	<section id="sharknado" class="content-block style-2 grouping">
 		<div class="wrapper">
 			<a href="#" class="figure">
-				<img src="images/sharknado.jpg" alt="Sharknado movie">
+				<img srcset="images/sharknado.jpg" alt="Sharknado movie">
 			</a>
 			<h1>Sharknado</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad optio rem placeat laboriosam, natus ab,
@@ -116,7 +116,7 @@ Intro Section
 	<section id="open-water" class="content-block style-1 grouping">
 		<div class="wrapper">
 			<a href="#" class="figure">
-				<img src="images/open-water.jpg" alt="Open Water movie">
+				<img srcset="images/open-water.jpg 1x, images/open-water@2x.jpg 2x" alt="Open Water movie">
 			</a>
 			<h1>Open Water</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia possimus inventore, itaque dolorum
