initial flexbox demos

--- a/My-own-sec4/index.html
+++ b/My-own-sec4/index.html
@@ -79,7 +79,7 @@ Secondary Sections
 ===============
 -->
 	<section class="secondary-section grouping">
-		<div class="wrapper">
+		<div class="wrapper columns">
 			<div class="column">
 				<figure>
 					<img srcset="images/octopus-icon.svg" alt="Octopus">
