CSS course completed last task left

--- a/My-own-sec4/flexbox.html
+++ b/My-own-sec4/flexbox.html
@@ -65,6 +65,8 @@ Flexbox Demo
 	<div class="flex-item flex-item3">item 3</div>
 	<div class="flex-item flex-item4">item 4</div>
 	<div class="flex-item flex-item5">item 5</div>
+	<div class="flex-item flex-item6">item 6</div>
+	
 </section>
 
 
