--- a/My-own-sec4/index.html
+++ b/My-own-sec4/index.html
@@ -115,6 +115,56 @@ Secondary Sections
 		</div><!-- end wrapper -->
 
 	</section>
+
+	<!-- Product listing -->
+	<section class="secondary-section grouping">
+		<ul class="wrapper product-list">
+			<li class="product-list-item">
+				<figure>
+					<img src="images/octopus-icon.svg" alt="Octopus">
+				</figure>
+				<h2>The Octopus</h2>
+				<p>Lorem ipsum dolor sit.</p>
+				<a href="#" class="button">Tenticals &raquo;</a>
+			</li>
+			<li class="product-list-item">
+				<figure>
+					<img src="images/crab-icon.svg" alt="Crab">
+				</figure>
+				<h2>The Crab</h2>
+				<p>Lorem ipsum dolor sit.</p>
+				<a href="#" class="button">Crabby &raquo;</a>
+			</li>
+			<li class="product-list-item">
+				<figure><img src="images/whale-icon.svg" alt="Whale"></figure>
+				<h2>The Whale</h2>
+				<p>Lorem ipsum.</p>
+				<a href="#" class="button">Stuart &raquo;</a>
+			</li>
+			<li class="product-list-item">
+				<figure>
+					<img src="images/octopus-icon.svg" alt="Octopus">
+				</figure>
+				<h2>The Octopus</h2>
+				<p>Lorem ipsum dolor sit amet.</p>
+				<a href="#" class="button">Tenticals &raquo;</a>
+			</li>
+			<li class="product-list-item">
+				<figure>
+					<img src="images/crab-icon.svg" alt="Crab">
+				</figure>
+				<h2>The Crab</h2>
+				<p>Lorem ipsum dolor.</p>
+				<a href="#" class="button">Crabby &raquo;</a>
+			</li>
+			<li class="product-list-item">
+				<figure><img src="images/whale-icon.svg" alt="Whale"></figure>
+				<h2>The Whale</h2>
+				<p>Lorem ipsum.</p>
+				<a href="#" class="button">Stuart &raquo;</a>
+			</li>
+		</ul><!-- end wrapper -->
+	</section>
 	<!-- Footer -->
 	<footer>
 		<div class="wrapper grouping">
